Implement spread-first picture book layouts
